# invoice-info-extractor

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  logger_setup.py  settings.py
data/: invoices.db-shm  invoices.db-wal
extractors/: date_extractor.py
invoice_submission/: config.py  invoice_dispatcher.py  invoice_sender.py
invoice_validation/: __init__.py  gemini_extraction.py  ocr.py  pipeline.py  prompts.py  protocols.py
llm/: client.py  gemini_llm.py
ocr/: ocr.py
pipeline/: batch_llm.py  fallback.py  parser.py  processor.py  prompt_builder.py  stages.py  visualizer.py
pipeline/evaluation/: evaluation_summary.py
pipeline/llm_batch/: batch_llm.py  batch_parser.py  fallback.py
pipeline/validation/: validation_layer.py
results/: evaluation_summary.json  pipeline_export.csv  pipeline_export.json
schemas/: models.py
scripts/: evaluation_run.py  generate_eval_receipts.py  run_pipeline.bat  run_pipeline.ps1
src/receipt_pipeline/: __init__.py
submit/: __main__.py  config.py  loader.py  service.py  submission.py  submit_invoices.py
tests/: __init__.py
workers/: README.md  __init__.py  api.py  config.py  human_review_store.py  run_pipeline.py
workers/core/: llm_worker.py  ocr_worker.py  post_ocr_worker.py  validate_worker.py
workers/db/: __init__.py  crud.py  session.py
workers/pipelines/: __init__.py  ingest_cli.py  ingestion.py  job_wait.py
workers/redis/: redis_client.py  redis_health.py
workers/retry/: retry_ops.py  retry_strategy.py
(+53 files in other folders)
