[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-pipeline"
version = "0.1.0"
description = "Batch invoice OCR with Redis workers, rules + Gemini, SQLite jobs, Google Forms submit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "pytesseract",
    "google-generativeai",
    "python-dotenv",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "redis>=5.0",
    "SQLAlchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
